--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 spring:
   profiles:
-    active: prod
+    active: dev
+  thymeleaf:
+    suffix: .html
+    cache: false
+    prefix: classpath:/templates/
